Fixed url wrap around issue

--- a/src/styles/comment.css
+++ b/src/styles/comment.css
@@ -6,7 +6,6 @@ a {
     font-size: 0.5em;
     text-align: left;
     padding-bottom: 1%;
-    border-bottom: 1px solid #3b2e2a;
     padding-top: '1%';
     overflow-x: hidden;
 }
