--- a/src/styles/story.css
+++ b/src/styles/story.css
@@ -15,6 +15,7 @@
     font-size: 0.4em;
     color: black;
     text-decoration: none;
+    white-space: nowrap;
 }
 
 .author {
